namespace Client.Desktop.Proto.Tracing.Enums;

public enum UseCaseMeta
{
    CreateTicket,
    ChangeLanguageModel,
    ChangePrompt,
    ExportData,
    CreateNote,
    UpdateNote,
    ChangeNoteTypeColor,
    ChangeNoteTypeName,
    CreateNoteType,
    CreateTag,
    UpdateTag,
    CreateSprint,
    ChangeSprintActiveStatus,
    TicketAddedToSprint,
    UpdateSprint,
    AddTicketToCurrentSprint,
    UpdateTicket,
    ChangeDocuTimerSaveInterval,
    ChangeSnapshotSaveInterval,
    CreateTimerSettings,
    CreateWorkDay,
    CommandSent
}